Issue #14697: Fix missing parser module support for set displays and set comprehensions.